# FDFramework

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  FDCoreSystems.pro  FDFramework.pro  FDGLRenderingSystems.pro  FDGameEngineSystems.pro  FDJsonSerialization.pro  FDMathSystems.pro  FDPythonScripting.pro  FDRenderingSystems.pro  FDScripting.pro  FDScriptingSystems.pro  FDSerialization.pro  FDSerializationSystems.pro  FDUISystems.pro  FDXmlSerialization.pro  README.md  SUMMARY.md  analysis-and-design.md  c++-style-guide-and-coding-rules.md  fdengine.md  setup_environment.sh
specs/: arch_idea_draft  spec_v0.1.odt
specs/FDFrameWork/: 128002.diagram  128130.bodies  128130.diagram  134530  141058  2.session  FDFrameWork.prj  FDFramework.mdj  generation_settings
